--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Reproducible Reports in Psychology
 Version: 0.7
 Author: Ian G Mackenzie
 Maintainer: Ian G Mackenzie <ian.mackenzie@uni-tuebingen.de>
-Description: Helper functions for producing reports in Psychology (Reproducible Research). Provides required formatted strings (APA style) for use in 'Sweave'/'Knitr' 'Latex' integration within *.Rnw files.
+Description: Helper functions for producing reports in Psychology (Reproducible Research). Provides required formatted strings (APA style) for use in 'Knitr'/'Latex' integration within *.Rnw files.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -16,4 +16,4 @@ Imports:
   ez,
   testthat,
   xtable
-Depends: R(>= 2.10)
+Depends: R(>= 3.4)
