--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
 exportPattern("^[[:alpha:]]+")
+importFrom("utils", "modifyList")
 importFrom("dplyr", "%>%")
 importFrom("ez", "ezANOVA")
-importFrom("testthat", "context", "test_that", "expect_equal", "expect_error")
