R CMD check + version 1.0.0

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: psychReport
 Type: Package
 Title: Reproducible Reports in Psychology
-Version: 0.10.0
+Version: 1.0.0
 Author: Ian G Mackenzie
 Maintainer: Ian G Mackenzie <ian.mackenzie@uni-tuebingen.de>
 Description: Helper functions for producing reports in Psychology (Reproducible Research). Provides required formatted strings (APA style) for use in 'Knitr'/'Latex' integration within *.Rnw files.
@@ -9,13 +9,13 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
-Imports: 
+Imports:
+  broom,
   cli,
   crayon,
   dplyr,
   ez,
-  xtable,
-  broom
+  xtable
 Suggests:
   testthat
 Depends: R(>= 3.4)
