--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: psychReport
 Type: Package
 Title: Reproducible Reports in Psychology
-Version: 2.1.0
+Version: 2.2.0
 Authors@R: c(
     person(given = "Ian G.", family = "Mackenzie", email="ian.mackenzie@uni-tuebingen.de", role = c("cre", "aut")),
     person(given = "Carolin", family = "Dudschig", email="carolin.dudschig@uni-tuebingen.de", role = c("aut"))
@@ -15,7 +15,7 @@ RoxygenNote: 7.1.1
 Imports:
   broom,
   cli,
-  dplyr,
+  dplyr(>= 1.0),
   ez,
   xtable
 Suggests:
