--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,5 @@
 exportPattern("^[[:alpha:]]+")
-importFrom("stats", "sd", "setNames")
+importFrom("stats", "sd", "setNames", "qt")
 importFrom("utils", "modifyList")
 importFrom("dplyr", "%>%", "vars", "mutate_at", "all_of")
 importFrom("broom", "tidy")
